--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -44,6 +44,12 @@
   }
 }
 
+@media screen and (max-width: 960px) {
+  .unknown-listings-title {
+    white-space: unset;
+  }
+}
+
 @media screen and (max-width: 920px) {
   .search-form-container {
     padding: 2.5rem;
@@ -215,10 +221,6 @@
 
   .include-unknown-container {
     margin: 1rem 0 0.5rem 0;
-  }
-
-  .unknown-listings-title {
-    white-space: unset;
   }
 
   .unknown-listings-subtitle {
