--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -1,9 +1,12 @@
 *,
 *::before,
 *::after {
-  font-family: "Raleway", sans-serif;
   box-sizing: border-box;
   margin: 0;
+}
+
+body {
+  font-family: "Raleway", sans-serif;
 }
 
 i {
