--- a/src/scss/_search-form.scss
+++ b/src/scss/_search-form.scss
@@ -12,7 +12,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(90, 90, 100, 0.6);
+  background: linear-gradient(135deg, rgba(99, 99, 99, 0.6), rgba(52, 52, 80, 0.82));
   overflow: hidden;
 }
 
