--- a/src/scss/_listings.scss
+++ b/src/scss/_listings.scss
@@ -1,15 +1,16 @@
 .search-results-container {
   background-color: rgb(250, 245, 225);
   border-radius: 0.6rem;
-  padding: 2rem;
+  padding: 1.5rem;
   margin: 0 1.5rem 8rem 1.5rem;
   box-shadow: 0 0.25rem 1.2rem 0.15rem #8787874d;
-  margin-top: 3rem;
+  margin-top: 1.5rem;
 }
 
 .listings-title-container {
   display: flex;
   align-items: center;
+  margin-bottom: 2.5rem;
 }
 
 .listings-title {
@@ -20,7 +21,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  gap: 3rem;
+  gap: 2.5rem;
   min-height: 25rem;
   margin-top: 2rem;
 }
@@ -65,13 +66,21 @@
   font-family: 'Work Sans', sans-serif;
   display: flex;
   flex-direction: column;
-  width: 23rem;
+  width: 25rem;
   height: 29rem;
   color: #222427;
   background-color: rgb(253, 253, 252);
   border-radius: 0.6rem;
   box-shadow: 0 0.25rem 1rem #a4a4a44d;
   overflow: hidden;
+}
+
+.no-images-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  min-height: 17rem;
 }
 
 .listing-image-container {
@@ -89,8 +98,7 @@
 
 .listing-image {
   width: 100%;
-  min-height: 15.25rem;
-  max-height: calc(100% - 2rem);
+  height: calc(100% - 2rem);
   object-fit: cover;
   margin: 0 auto;
 }
