--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,6 +11,7 @@
 @import "./search-form";
 @import "./listings";
 @import "./loading";
+@import "./navbar";
 @import "./sorting-dropdown";
 
 // media queries
