--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -18,3 +18,15 @@ i {
   background-color: #fffbf0;
   margin: 0 auto;
 }
+
+.link {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #212529;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: none;
+    color: black;
+  }
+}
