--- a/src/scss/_listings.scss
+++ b/src/scss/_listings.scss
@@ -15,6 +15,7 @@
 
 .listings-title {
   font-size: 1rem;
+  white-space: pre-wrap;
 }
 
 .listings-container {
@@ -380,5 +381,19 @@
 
   .pagination {
     margin: 0;
+  }
+
+  a {
+    user-select: none;
+    &:focus {
+      box-shadow: none;
+    }
+  }
+
+  .active .page-link {
+    font-weight: 500;
+    color: #222427;
+    border-color: transparent;
+    background-color: rgb(229, 227, 246);
   }
 }
