--- a/src/assets/scss/_listings.scss
+++ b/src/assets/scss/_listings.scss
@@ -1,16 +1,34 @@
 .search-results-container {
+  position: relative;
   background-color: rgb(250, 245, 225);
+  max-width: 90rem;
   border-radius: 0.6rem;
   padding: 1.5rem;
   margin: 0 1.5rem 8rem 1.5rem;
   box-shadow: 0 0.25rem 1.2rem 0.15rem #8787874d;
-  margin-top: 1.5rem;
+  margin: 1.5rem auto 0 auto;
+  margin: 0 auto;
+
+  // &::before {
+  //   content: "";
+  //   position: absolute;
+  //   width: 100%;
+  //   height: 100%;
+  //   background: url("../../../public/leaves-gdc711b7fd_1280.jpg");
+  //   // background: url("../../../public/leaves-6383340_1280.webp");
+  //   background-size: contain;
+  //   opacity: 0.075;
+  //   left: 0;
+  //   top: 0;
+  // }
 }
 
 .listings-title-container {
+  position: relative;
   display: flex;
   align-items: center;
   margin-bottom: 2.5rem;
+  z-index: 30;
 }
 
 .listings-title {
@@ -19,6 +37,7 @@
 }
 
 .listings-container {
+  position: relative;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
