--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -1,32 +1,44 @@
-.navbar-container {
+.navbar {
   position: fixed;
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   gap: 2rem;
   background-color: whitesmoke;
   width: 100%;
   height: 3.5rem;
-  box-shadow: 0 0.3rem 1.1rem #6d6d6d33;
+  box-shadow: 0 0.5rem 1.1rem #6d6d6d33;
   padding: 0 2rem;
   top: 0;
-  z-index: 300;
+  z-index: 59;
+  overflow: hidden;
 }
 
 .navbar-height {
+  position: relative;
+  width: 100%;
   height: 3.5rem;
+  top: 0;
+}
+
+.navbar-logo {
+  margin-right: auto;
 }
 
 .navbar-link {
   display: flex;
   align-items: center;
   gap: 0.35rem;
-  color: rgb(19, 18, 18);
   font-weight: 500;
+  color: rgb(19, 18, 18);
   text-decoration: none;
-  
+  letter-spacing: 0.01rem;
+  z-index: inherit;
+
   &:hover {
     color: black;
     font-weight: 600;
     text-decoration: none;
+    letter-spacing: 0;
   }
 }
