Update responsive homepage, routing, basic navbar styles

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -84,6 +84,7 @@
 @import "./react-widgets-dropdown.scss";
 
 @import "./animations";
+@import "./homepage";
 @import "./search-form";
 @import "./listings";
 @import "./loading";
