--- a/src/assets/scss/_listings.scss
+++ b/src/assets/scss/_listings.scss
@@ -91,9 +91,21 @@
   height: 29rem;
   color: #222427;
   background-color: rgb(253, 253, 252);
+  border: 2px solid $color-highlight;
   border-radius: 0.6rem;
   box-shadow: 0 0.25rem 1rem #a4a4a44d;
   overflow: hidden;
+  z-index: 2;
+
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   width: 100%;
+  //   height: 100%;
+  //   background-color: $color-primary;
+  //   opacity: 0.5;
+  //   z-index: -1;
+  // }
 }
 
 .listing-save-container {
@@ -195,7 +207,7 @@
   justify-content: center;
   position: absolute;
   font-size: 1.4rem;
-  color: #0a1064;
+  color: $color-primary;
   height: 100%;
   width: 1.5rem;
   top: 0;
@@ -207,7 +219,7 @@
   overflow: hidden;
   
   &:hover {
-    color: #9590d1;
+    color: #0a1064;
     transition: all 200ms;
     -webkit-transition: all 200ms;
   }
@@ -238,8 +250,9 @@
 
 .listing-image-circle {
   color: #0a1064;
-  width: 0.75rem;
-  height: 0.75rem;
+  background-color: $color-primary;
+  width: 0.7rem;
+  height: 0.7rem;
   transition: 200ms ease all;
   -webkit-transition: 200ms ease all;
   border: 2px solid #0a1064;
@@ -255,15 +268,9 @@
   }
 }
 
-.listing-image-circle-current {
-  color: #1a75ff;
-  background-color: #1a75ff;
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-  font-size: 1rem;
-  transition: 200ms ease all;
-  -webkit-transition: 200ms ease all;
+.listing-image-current {
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .listing-details-container {
