--- a/src/assets/scss/_media.scss
+++ b/src/assets/scss/_media.scss
@@ -39,6 +39,12 @@
 }
 
 @media screen and (max-width: 960px) {
+  .hero-subtitle {
+    font-size: 2.3rem;
+    white-space: normal;
+  }
+  
+
   .search-form-container {
     padding: 2.5rem;
   }
@@ -58,11 +64,63 @@
   }
 }
 
+@media screen and (max-width: 865px) {
+  .hero-text-container {
+    padding: 0.5rem 2rem 1rem 2rem;
+  }
+
+  .hero-title {
+    font-size: 4rem;
+
+
+    &::before {
+      width: calc(100% + 5rem);
+    }
+  }
+
+  .hero-subtitle {
+    font-size: 2.3rem;
+    white-space: normal;
+    width: 100%;
+    line-height: 1.3;
+    padding-right: 2rem;
+  }
+
+  
+  .hero-subtitle-highlight {
+    &::before {
+      height: 1.1rem;
+      border-top: 7px solid $color-primary;
+      transform: rotate(-1.5deg);
+    }
+  }
+
+  .hero-section-bee {
+    position: absolute;
+    width: 65px;
+    transform: rotate(22deg);
+    margin-left: 0.55rem;
+    bottom: 0.75rem;
+    z-index: 58;
+  }
+}
+
 @media screen and (max-width: 853px) {
   .hero-section-search-title {
     font-size: 2.75rem;
   }
 
+  .hero-intro-text {
+    max-width: 100%;
+    text-align: center;
+    padding: 0 1rem;
+  }
+  
+  .btn-hero {
+    width: 18rem;
+    margin: 1.5rem auto 0 auto;
+  }
+  
   .search-form-container {
     flex-direction: row;
     gap: 0.5rem;
@@ -151,11 +209,24 @@
   }
 }
 
+@media screen and (max-width: 750px) {
+  .hero-intro-text {
+    font-size: 1.45rem;
+  }
+}
+
+
 @media screen and (max-width: 700px) {
-  .hero-section-search-title {
-    font-size: 3rem;
-    max-width: 22rem;
-    margin: 5rem auto 0.5rem auto;
+  .hero-text-container {
+    padding: 0 0 2rem 0;
+  }
+
+  .hero-title {
+    padding: 0.5rem 0.5rem 0 0.5rem;
+  }
+
+  .hero-subtitle {
+    padding-right: 2.6rem;
   }
 
   .search-form-container {
@@ -196,7 +267,41 @@
   }
 }
 
+@media screen and (max-width: 670px) {
+  .hero-subtitle {
+    letter-spacing: 0.03rem;
+    line-height: 1.2;
+    padding: 0 3rem 0 0.4rem;
+  }
+
+  .hero-section-search-title {
+    font-size: 3rem;
+    max-width: 22rem;
+    margin: 5rem auto 0.5rem auto;
+  }
+
+  .hero-intro-text {
+    font-size: 1.4rem;
+    margin: 1.5rem 0 0 0;
+    padding: 0 1rem;
+  }
+}
+
 @media screen and (max-width: 630px) {
+  .hero-title {
+    width: 100%;
+    font-size: 3.4rem;
+
+    &::before {
+      width: 100%;
+      border-bottom: 0.5rem solid $color-primary;
+    }
+  }
+
+  .btn-hero {
+    width: 17rem; 
+  }
+
   .search-form-container {
     padding: 2.5rem 3rem 5rem 3rem;
   }
@@ -225,6 +330,42 @@
   }
 }
 
+@media screen and (max-width: 530px) {
+  .hero-title {
+    font-size: 3rem;
+  }
+
+  .hero-subtitle {
+    font-size: 2rem;
+    font-weight: bold;
+    padding-right: 3rem;
+  }
+
+  .hero-subtitle-highlight {
+    &::before {
+      height: 0.75rem;
+      border-top: 5px solid $color-primary;
+      transform: rotate(-2.5deg);
+      bottom: 1.3rem;
+    }
+  }
+
+  .hero-section-bee {
+    bottom: 0.55rem;
+  }
+
+  .hero-intro-text {
+    font-size: 1.3rem;
+    padding: 0 2.5rem;
+  }
+
+  .btn-hero {
+    width: 15rem;
+    font-size: 1.5rem;
+    margin: 2.5rem auto 0 auto;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .search-form-container {
     width: 88%;
@@ -238,6 +379,40 @@
 }
 
 @media screen and (max-width: 478px) {
+  .hero-subtitle {
+    font-size: 1.9rem;
+    line-height: 1.25;
+    padding: 0;
+  }
+
+  .hero-subtitle-highlight {
+    display: block;
+    margin: 0 auto;
+    left: -2rem;
+
+    &::before {
+      height: 0.8rem;
+      transform: rotate(-2deg);
+      bottom: 0.65rem;
+    }
+  }
+
+  .hero-section-bee {
+    width: 55px;
+    transform: rotate(27deg);
+    bottom: 0;
+    margin-left: 0.3rem;
+  }
+  
+  .hero-intro-text {
+    padding: 0 1.5rem;
+  }
+
+  .btn-hero {
+    width: 14rem;
+    margin: 1.5rem auto 0 auto;
+  }
+
   .loading-screen-container {
     padding: 1rem;
   }
@@ -271,7 +446,52 @@
   }
 }
 
+@media screen and (max-width: 430px) {
+  .hero-title {
+    font-size: 2.6rem;
+  }
+
+  .hero-subtitle {
+    font-size: 1.65rem;
+    line-height: 1.4;
+  }
+}
+
 @media screen and (max-width: 370px) {
+  .hero-title {
+    letter-spacing: 0.03rem;
+    font-size: 2.75rem;
+    line-height: 1;
+    max-width: 16rem;
+
+    &::before {
+      border-radius: 5px;
+      width: 13rem;
+    }
+
+    &::after {
+      position: absolute;
+      content: "";
+      width: 10rem;
+      border-radius: 5px;
+      border-bottom: 0.25rem solid $color-primary;
+      z-index: -1;
+      bottom: 3rem;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
+  .hero-subtitle {
+    font-size: 1.8rem;
+    padding: 0.5rem 1.3rem 0 1.3rem;
+  }
+
+  .hero-intro-text {
+    font-size: 1.15rem;
+    padding: 0 1.5rem;
+  }
+  
   .loading-screen-container {
     padding: 0;
   }
@@ -295,5 +515,15 @@
 
   .search-radius-slider {
     width: 17rem;
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .hero-subtitle {
+    padding: 1rem 0.5rem 0 0.5rem;
+  }
+
+  .hero-intro-text {
+    margin: 0.5rem 0 0 0;
   }
 }
