--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -5,10 +5,11 @@
   justify-content: flex-start;
   gap: 2rem;
   background-color: whitesmoke;
+  background-color: $color-secondary;
   width: 100%;
-  height: 3.5rem;
-  box-shadow: 0 0.5rem 1.1rem #6d6d6d33;
-  padding: 0 2rem;
+  height: 4rem;
+  // box-shadow: 0 0.5rem 1.1rem #6d6d6d33;
+  // padding: 0 2rem;
   top: 0;
   z-index: 59;
   overflow: hidden;
@@ -17,28 +18,57 @@
 .navbar-height {
   position: relative;
   width: 100%;
-  height: 3.5rem;
+  height: 4rem;
   top: 0;
 }
 
 .navbar-logo {
-  margin-right: auto;
-}
-
-.navbar-link {
   display: flex;
   align-items: center;
-  gap: 0.35rem;
-  font-weight: 500;
-  color: rgb(19, 18, 18);
-  text-decoration: none;
-  letter-spacing: 0.01rem;
-  z-index: inherit;
+  font-family: 'mathilde';
+  font-family: 'Otterly';
+  font-size: 2rem;
+  height: 100%;
+  margin-right: auto;
 
   &:hover {
     color: black;
-    font-weight: 600;
     text-decoration: none;
-    letter-spacing: 0;
+  }
+}
+
+.navbar-logo-img {
+  position: absolute;
+  height: 4rem;
+  padding: 0.2rem;
+  top: 0;
+  left: 0;
+}
+
+.navbar-logo-text {
+  position: relative;
+  color: $color-text;
+  height: 100%;
+  left: 3.75rem;
+}
+
+.navbar-link {
+  font-family: 'Otterly';
+  display: flex;
+  align-items: center;
+  gap: 0.35rem;
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: $color-text;
+  text-decoration: none;
+  letter-spacing: 0;
+  z-index: inherit;
+  transition: 300ms ease all;
+  
+  &:hover {
+    color: black;
+    text-decoration: none;
+    letter-spacing: 0.025rem;
+    transition: 300ms ease all;
   }
 }
