--- a/src/assets/scss/_search-form.scss
+++ b/src/assets/scss/_search-form.scss
@@ -1,29 +1,57 @@
+
+  // font-family: 'mathilde';
+  // font-family: 'KGStrawberryLimeade';
+  // font-family: 'Glitter';
+  // font-family: 'Berton-Voyage-trial';
+  // font-family: 'AYearWithoutRain';
+  // font-family: 'Berton';
+  // font-family: 'Otterly';
+  // font-family: 'ValentineBees';
+
 .hero-section-search {
   position: relative;
-  // background: url("../../../public/nature-4875362_1280.jpg") no-repeat center fixed;
-  background-size: cover;
-  height: 100%;
+  background-color: $color-secondary;
+  width: 100%;
+  // height: 100%;
   min-height: 100vh;
   overflow: hidden;
+  z-index: 49;
 }
 
 .hero-section-search-overlay {
   position: absolute;
+  background-color: rgba(138, 170, 179, 0.525);
   width: 100%;
   height: 100%;
-  background: linear-gradient(160deg, #000 0%, #000 10%, #fff 100%);
-  background: linear-gradient(rgba(6, 60, 7, 0.61) 0%, rgba(14, 37, 4, 0.6) 20%, rgba(14, 14, 14, 0.6) 100%); 
-  overflow: hidden;
+  z-index: 10;
+}
+
+.hero-section-search-img {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  right: 0;
+  z-index: 5;
 }
 
 .hero-section-search-title {
+  font-family: 'KGYouWontBringMeDown';
   position: relative;
-  font-size: 3rem;
+  font-size: 3.75rem;
   color: white;
   font-weight: bold;
   text-align: center;
-  margin-top: 10rem;
-  text-shadow: 2px 2px 5px #595959;
+  margin-top: 5rem;
+  text-shadow: 2px 2px 3px #aeae89;
+  white-space: pre-wrap;
+  line-height: 1;
+  z-index: 15;
+}
+
+.text-logo {
+  color: $color-primary;
+  font-weight: 700;
+  text-shadow: 2px 2px 2px #aeae89;
 }
 
 .search-form-container {
@@ -36,12 +64,23 @@
   width: 90%;
   max-width: 62rem;
   min-height: 11.5rem;
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: $color-highlight;
+  background: url("../../../public/honeycomb.jpg");
+  background-position: top center;
   border-radius: 0.6rem;
-  box-shadow: 0 0 0 0.55rem rgba(255, 255, 255, 0.22);
+  box-shadow: 0 0 3px 1px #8baeb3;
   margin: 3rem auto 0 auto;
   padding: 2.5rem 6rem;
-  z-index: 55;
+  z-index: 56;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(252, 249, 229, 0.92);
+    z-index: -1;
+  }
 }
 
 .search-form-row {
@@ -230,6 +269,7 @@
   outline: none;
   margin: auto 0 0 auto;
   padding-bottom: 1.15rem;
+  z-index: 50;
 
   &:hover {
     color: black;
@@ -246,15 +286,17 @@
 }
 
 .btn-search {
+  font-family: 'AYearWithoutRain';
   position: absolute;
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: 2rem;
+  font-weight: 500;
   color: white;
-  background-color: rgb(16, 123, 20);
   width: 12rem;
   height: 4rem;
-  border: 2px solid rgb(22, 79, 19);
-  border-radius: 0.3rem;
+  color: #322;
+  background-color: $color-primary;
+  border: 3px solid $color-highlight;
+  border-radius: 0.5rem;
   outline: none;
   left: 50%;
   top: 100%;
@@ -271,8 +313,9 @@
 
   &:active,
   &:hover {
-    outline: none;
-    background-color: rgb(21, 84, 12);
+    color: #322;
+    background-color: $color-highlight;
+    border: 3px solid $color-primary;
     transition: 300ms ease all;
     -webkit-transition: 300ms ease all;
   }
@@ -434,160 +477,9 @@
   input[type="checkbox"] {
     width: 1.2rem;
     margin-left: 0.5rem;
-    accent-color: rgb(55, 146, 206);
+    accent-color: $color-secondary;
+    transition: 300ms ease all;
+    -webkit-transition: 300ms ease all;
     cursor: pointer;
   }
 }
-
-
-
-// redesign /////
-.hero-section {
-  position: relative;
-  width: 100%;
-  height: calc(100vh - 3.5rem);
-  background-color: $color-secondary;
-}
-
-.hero-section-img-container {
-  display: flex;
-  align-items: flex-end;
-  justify-content: right;
-  height: 100%;
-}
-
-.hero-section-img {
-  position: relative;
-  width: 70%;
-
-  width: 60%;
-  // margin-right: 2rem;
-  width: 100%;
-  right: 0;
-  height: auto;
-  z-index: 5;
-}
-
-.hero-text-container {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  padding: 1rem 3rem 1rem 3rem;
-  z-index: 20;
-}
-
-.hero-title {
-  position: relative;
-  font-family: 'FabfeltScript';
-  font-size: 4.5rem;
-  text-align: center;
-  z-index: 21;
-
-  &::before {
-    position: absolute;
-    content: "";
-    width: 43rem;
-    border-bottom: 0.25rem solid $color-primary;
-    z-index: -1;
-    bottom: 0.6rem;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-}
-
-.hero-subtitle {
-  font-family: 'KGYouWontBringMeDown';
-  font-size: 2.5rem;
-  line-height: 1.4;
-  white-space: pre-wrap;
-  text-align: center;
-  // margin-top: 0.5rem;
-}
-
-.hero-subtitle-highlight {
-  display: inline;
-  position: relative;
-  // font-size: 3rem;
-  font-weight: bold;
-  width: fit-content;
-  margin-left: 0.5rem;
-  z-index: 20;
-
-  &::before {
-    position: absolute;
-    content: "";
-    height: 1.1rem;
-    width: calc(100% + 0.5rem);
-    background-color: $color-highlight;
-    border-top: 7px solid $color-primary;
-    z-index: -1;
-    transform: rotate(-2deg);
-    bottom: 1.25rem;
-    left: 0.2rem;
-  }
-}
-
-.hero-intro-text {
-  font-family: 'AYearWithoutRain';
-  font-size: 1.55rem;
-  max-width: 34rem;
-  margin-top: 1rem;
-}
-
-.hero-text-highlight {
-  text-decoration: underline;
-  text-decoration-color: $color-primary;
-}
-
-.hero-section-bee {
-  position: absolute;
-  width: 100px;
-  transform: rotate(22deg);
-  left: calc(100% + 1.5rem);
-  bottom: 0.05rem;
-  z-index: 58;
-}
-
-.btn-hero {
-  font-family: 'AYearWithoutRain';
-  font-size: 1.75rem;
-  font-weight: 500;
-  width: 23rem;
-  color: #322;
-  background-color: $color-primary;
-  border: 3px solid $color-highlight;
-  border-radius: 0.5rem;
-  outline: none;
-  text-align: center;
-  padding: 0.6rem 0;
-  transition: 300ms ease all;
-  -webkit-transition: 300ms ease all;
-  margin-top: 2rem;
-
-  &:visited {
-    color: #322;
-    background-color: $color-primary;
-    border: 3px solid $color-highlight;
-  }
-
-  &:hover {
-    color: #322;
-    background-color: $color-highlight;
-    border: 3px solid $color-primary;
-    text-decoration: none;
-    transition: 300ms ease all;
-    -webkit-transition: 300ms ease all;
-  }
-}
-
-  // font-family: 'mathilde';
-  // font-family: 'KGStrawberryLimeade';
-  // font-family: 'Glitter';
-  // font-family: 'Berton-Voyage-trial';
-  // font-family: 'AYearWithoutRain';
-  // font-family: 'Berton';
-  // font-family: 'Otterly';
-  // font-family: 'ValentineBees';
